--- a/EventsApp.EventInfo.API/EventsApp.EventInfo.API.csproj
+++ b/EventsApp.EventInfo.API/EventsApp.EventInfo.API.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EventInfo.Business\EventInfo.Business.csproj" />
+  </ItemGroup>
+
 </Project>
