--- a/EventsApp-Ui/package.json
+++ b/EventsApp-Ui/package.json
@@ -1,6 +1,9 @@
 {
   "name": "events-app-ui",
   "version": "0.0.0",
+  "engines": {
+    "npm": "6.x"
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
