--- a/EventsApp-Ui/package.json
+++ b/EventsApp-Ui/package.json
@@ -2,7 +2,8 @@
   "name": "events-app-ui",
   "version": "0.0.0",
   "engines": {
-    "npm": "6.x"
+    "npm": "6.x",
+    "node": "10.x"
   },
   "scripts": {
     "ng": "ng",
